--- a/views/survey-form.ejs
+++ b/views/survey-form.ejs
@@ -12,20 +12,20 @@
     <div class="container">
       <%- include("./_share/header.ejs") %>
         <form action="/survey/regist/confirm" method="POST">
-          <input type="hidden" id="topicId" name="topicId" value="<%= topic.topics_id %>">
+          <input type="hidden" id="topicId" name="topicId" value="<%= topicId %>">
           <div class="row mb-3">
             <label for="nickname" class="col-sm-2 col-form-label">ニックネーム</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="nickname" name="nickname">
+              <input type="text" class="form-control" id="nickname" name="nickname" value="<%= data.nickname %>">
             </div>
           </div>
           <fieldset class="row mb-3">
             <legend class="col-form-label col-sm-2 pt-0">一つ選んで下さい</legend>
             <div class="col-sm-10">
-              <% for (var item of chose) { %>
+              <% for (let item of chose) { %>
                 <div class="form-check">
                   <input type="radio" class="form-check-input" name="chose" id="<%= item.chose %>"
-                    value="<%= item.chose %>" checked>
+                    value="<%= item.chose %>" <%= (item.chose===data.chose ? 'checked' : '' ) %>>
                   <label for="gridRadios1" class="form-check-label">
                     <%= item.chose %>
                   </label>
@@ -34,12 +34,12 @@
             </div>
           </fieldset>
           <div class="row mb-3">
-            <label for="prise" class="col-sm-2 col-form-label">欲しい景品</label>
+            <label for="comment" class="col-sm-2 col-form-label">欲しい景品</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="prise" name="prise">
+              <input type="text" class="form-control" id="comment" name="comment" value="<%= data.comment %>">
             </div>
           </div>
-          <button type="submit" class="btn btn-primary">回答する</button>
+          <button type="submit" class="btn btn-primary">確認する</button>
         </form>
     </div>
     <%- include("./_share/javascripts.ejs") %>
