--- a/views/_share/header.ejs
+++ b/views/_share/header.ejs
@@ -1,11 +1,5 @@
-<header class="d-flex flex-wrap justify-content-center mt-1 mb-4">
+<header class="d-flex flex-wrap justify-content-center mt-3 mb-4">
   <a href="/" class="d-flex align-items-center me-md-auto text-decoration-none">
-    <span>社内アンケート</span>
+    <h3>社内アンケート</h3>
   </a>
-  <ul class="nav nav-pills">
-    <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">HOME</a></li>
-    <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-    <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-    <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-  </ul>
 </header>
