--- a/views/survey-form.ejs
+++ b/views/survey-form.ejs
@@ -11,8 +11,7 @@
   <main>
     <div class="container">
       <%- include("./_share/header.ejs") %>
-        <form action="/survey/regist/confirm" method="POST">
-          <input type="hidden" id="topicId" name="topicId" value="<%= topicId %>">
+        <form action="/survey/regist/confirm" method="POST" class="pt-4">
           <div class="row mb-3">
             <label for="nickname" class="col-sm-2 col-form-label">ニックネーム</label>
             <div class="col-sm-10">
@@ -26,7 +25,7 @@
                 <div class="form-check">
                   <input type="radio" class="form-check-input" name="chose" id="<%= item.chose %>"
                     value="<%= item.chose %>" <%= (item.chose===data.chose ? 'checked' : '' ) %>>
-                  <label for="gridRadios1" class="form-check-label">
+                  <label for="<%= item.chose %>" class="form-check-label">
                     <%= item.chose %>
                   </label>
                 </div>
@@ -40,6 +39,7 @@
             </div>
           </div>
           <button type="submit" class="btn btn-primary">確認する</button>
+          <input type="hidden" id="topicId" name="topicId" value="<%= topicId %>">
         </form>
     </div>
     <%- include("./_share/javascripts.ejs") %>
