--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,11 +15,11 @@
       <%- include("./_share/header.ejs") %>
         <div class="col-xxl-8 px-4 py-5">
           <div class="row flex-lg-row align-items-center g-5 py-5">
-            <div class="col-10 col-sm-8 col-lg-6">
+            <div class="col-md-6 col-lg-6">
               <canvas id="chart" width="400" height="400" data-chose="<%= chose %>" data-agree="<%= agree %>">
               </canvas>
             </div>
-            <div class="col-lg-6">
+            <div class="col-md-6 col-lg-6">
 
               <div class="row row-cols-1 g-1">
                 <% for (let item of results) { %>
