最新コメントが上に出るように修正

--- a/views/regist-confirm.ejs
+++ b/views/regist-confirm.ejs
@@ -38,8 +38,8 @@
               <input type="text" class="form-control" value="<%= data.comment %>" disabled>
             </div>
           </div>
-          <button type="submit" class="btn btn-primary" data-method="POST"
-            data-action="/survey/regist/<%= topicId %>">修正</button>
+          <button type="submit" class="btn btn-primary me-3" data-method="POST"
+            data-action="/survey/regist/<%= topicId %>">修正する</button>
           <button type="submit" class="btn btn-primary" data-method="POST"
             data-action="/survey/regist/execute">回答する</button>
 
