コメント入力欄の表示文言をDBで管理するように修正

--- a/views/_share/header.ejs
+++ b/views/_share/header.ejs
@@ -1,5 +1,5 @@
 <header class="d-flex flex-wrap justify-content-center mt-3 mb-4">
-  <a href="/" class="d-flex align-items-center me-md-auto text-decoration-none">
+  <a href="/survey/" class="d-flex align-items-center me-md-auto text-decoration-none">
     <h3>社内アンケート</h3>
   </a>
 </header>
