--- a/views/survey-form.ejs
+++ b/views/survey-form.ejs
@@ -33,7 +33,7 @@
             </div>
           </fieldset>
           <div class="row mb-3">
-            <label for="comment" class="col-sm-2 col-form-label">欲しい景品</label>
+            <label for="comment" class="col-sm-2 col-form-label"><%= commentTitle %></label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="comment" name="comment" value="<%= data.comment %>">
             </div>
