--- a/views/survey-form.ejs
+++ b/views/survey-form.ejs
@@ -11,38 +11,67 @@
   <main>
     <div class="container">
       <%- include("./_share/header.ejs") %>
-        <form action="/survey/regist/confirm" method="POST" class="pt-4">
-          <div class="row mb-3">
-            <label for="nickname" class="col-sm-2 col-form-label">ニックネーム</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="nickname" name="nickname" value="<%= data.nickname %>">
-            </div>
+      <form action="/survey/regist/confirm" method="POST" class="pt-4 needs-validation" novalidate>
+        <div class="row mb-3">
+          <label for="nickname" class="col-sm-2 col-form-label">ニックネーム</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="nickname" name="nickname" value="<%= data.nickname || 'ゲスト' %>" required>
+            <div class="invalid-feedback">何でもいいから入力よろです！</div>
           </div>
-          <fieldset class="row mb-3">
-            <legend class="col-form-label col-sm-2 pt-0">一つ選んで下さい</legend>
-            <div class="col-sm-10">
-              <% for (let item of chose) { %>
-                <div class="form-check">
-                  <input type="radio" class="form-check-input" name="chose" id="<%= item.chose %>"
-                    value="<%= item.chose %>" <%= (item.chose===data.chose ? 'checked' : '' ) %>>
-                  <label for="<%= item.chose %>" class="form-check-label">
-                    <%= item.chose %>
-                  </label>
-                </div>
+        </div>
+        <fieldset class="row mb-3">
+          <legend class="col-form-label col-sm-2 pt-0">一つ選んで下さい</legend>
+          <div class="col-sm-10">
+            <% for (let [index, item] of chose.entries()) { %>
+              <div class="form-check">
+                <input type="radio" class="form-check-input" name="chose" id="<%= item.chose %>"
+                  value="<%= item.chose %>" <%=(item.chose===data.chose ? 'checked' : '' ) %> required>
+                <label for="<%= item.chose %>" class="form-check-label">
+                  <%= item.chose %>
+                </label>
+                <% if (index === chose.length -1) { %>
+                  <div class="invalid-feedback" style="margin-left: -23px;">何でもいいから選択よろです！</div>
                 <% } %>
-            </div>
-          </fieldset>
-          <div class="row mb-3">
-            <label for="comment" class="col-sm-2 col-form-label"><%= commentTitle %></label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="comment" name="comment" value="<%= data.comment %>">
-            </div>
+              </div>
+            <% } %>
           </div>
-          <button type="submit" class="btn btn-primary">確認する</button>
-          <input type="hidden" id="topicId" name="topicId" value="<%= topicId %>">
-        </form>
+        </fieldset>
+        <div class="row mb-3">
+          <label for="comment" class="col-sm-2 col-form-label">
+            <%= commentTitle %>
+          </label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="comment" name="comment" value="<%= data.comment %>" required>
+            <div class="invalid-feedback">何でもいいから入力よろです！</div>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">確認する</button>
+        <input type="hidden" id="topicId" name="topicId" value="<%= topicId %>">
+      </form>
     </div>
     <%- include("./_share/javascripts.ejs") %>
+      <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (function () {
+          'use strict'
+
+          // Fetch all the forms we want to apply custom Bootstrap validation styles to
+          var forms = document.querySelectorAll('.needs-validation')
+
+          // Loop over them and prevent submission
+          Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+              form.addEventListener('submit', function (event) {
+                if (!form.checkValidity()) {
+                  event.preventDefault()
+                  event.stopPropagation()
+                }
+
+                form.classList.add('was-validated')
+              }, false)
+            })
+        })()
+      </script>
   </main>
 </body>
 
