ヒストリーページの追加

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
     <div class="container">
       <%- include("./_share/header.ejs") %>
       <a href="/survey/">アンケート</a>
+      <a href="https://cozy-dodol-fef8f1.netlify.app">ロケット打ち上げ情報</a>
     <%- include("./_share/javascripts.ejs") %>
   </main>
 </body>
