--- a/views/500.ejs
+++ b/views/500.ejs
@@ -14,7 +14,7 @@
       <div class="d-flex justify-content-center">
         <div class="align-self-center text-center">
           <div class="display-1">500</div>
-          <div>Chu いろいろ試してくれててごめん</div>
+          <div>Chu いろいろ試してくれているのにごめん</div>
         </div>
       </div>
     </div>
