開発中用の改版履歴リンク追加

--- a/views/_share/header.ejs
+++ b/views/_share/header.ejs
@@ -2,4 +2,7 @@
   <a href="/survey/" class="d-flex align-items-center me-md-auto text-decoration-none">
     <h3>社内アンケート</h3>
   </a>
+  <ul class="nav nav-pills">
+    <li class="nav-item"><a href="/history" class="nav-link link-dark">改版履歴</a></li>
+  </ul>
 </header>
