--- a/views/survey-form.ejs
+++ b/views/survey-form.ejs
@@ -12,6 +12,13 @@
     <div class="container">
       <%- include("./_share/header.ejs") %>
       <form action="/survey/regist/confirm" method="POST" class="pt-4 needs-validation" novalidate>
+        <% if(locals.error) { %>
+          <div class="alert alert-danger">
+            <% for(var key in error) { %>
+              <div><i class="fa fa-fw fa-exclamation-circle"></i><%= error[key] %></div>
+            <% } %>
+          </div>
+        <% } %>
         <div class="row mb-3">
           <label for="nickname" class="col-sm-2 col-form-label">ニックネーム</label>
           <div class="col-sm-10">
