改版履歴追加

--- a/views/survey-history.ejs
+++ b/views/survey-history.ejs
@@ -22,17 +22,27 @@
         <tbody>
           <tr>
             <th scope="row">1</th>
-            <td>回答画面のバリデーション対応</td>
-            <td>2023/4/2</td>
+            <td>回答画面で空白のみ入力された場合に弾くチェック処理を追加</td>
+            <td>2023/4/23</td>
           </tr>
           <tr>
             <th scope="row">2</th>
+            <td>アクセスログの出力対応</td>
+            <td>2023/4/9</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>回答画面で未回答を弾くようにチェック処理を追加</td>
+            <td>2023/4/2</td>
+          </tr>
+          <tr>
+            <th scope="row">4</th>
             <td>回答画面「コメント」の表示文言の可変化対応(DB管理)</td>
             <td>2023/3/31</td>
           </tr>
           <tr>
-            <th scope="row">3</th>
-            <td>AWSへ初回リリース</td>
+            <th scope="row">5</th>
+            <td>AWSへ初回デプロイ</td>
             <td>2023/3/27</td>
           </tr>
         </tbody>
